# readmission_predictor_mimic

./: .dockerignore  .env.example  .gitignore  DEMO_PROMPTS.md  Dockerfile  LICENSE  Makefile  README.md  bug_exposure_report.md  pyproject.toml  querytriagesystem.md  requirements.txt  wlst_e2e_report.md
cloud/: vertex_job_spec.yaml
config/: settings.py
data/mappings/: category_to_snomed.json  chartitem_to_snomed.json  clinical_cohorts.json  comorbidity_to_snomed.json  drug_groups.json  drug_to_snomed.json  icd10_to_ais_head.json  icd10_to_charlson.json  icd10cm_to_snomed.json  labitem_to_snomed.json  loinc_to_snomed.json  organism_to_snomed.json  similarity_categorical_domains.json  similarity_reference_ranges.json
data/ontology_cache/: biological_limits.json  loinc_reference_ranges.json
data/processed/: lab_distributions.json
docs/: acknowledgements.md  api.md  architecture.md  chat-ui-quickstart.md  cloud_training.md  cohort-by-similarity-manual-test.md  decomposer-refactor-changelog.md  e2e-bigquery-testing.md  features.md  gower_distance_design.md  ontology.md  outlier-screening-manual-test.md  phase-8d-9-demo-guide.md  phase-h-externally-grounded-critic.md  phase-h-mcp-setup.md  phase-h-smoke-test.md  phase0_agent_prompts.md  phase1-snomed-hierarchy-plan.md  phase7a-smoke-test.md  phase8d-first-estimators.md  phase9-patient-similarity.md  troubleshooting.md  wlst_pipeline_plan.md
docs/2026-05-25/: graph-db-causal-inference-status.md
docs/2026-06-04/: rdf-graph-building-status.md
docs/demo/: 00_chatbot_architecture.md  01_demo_outline.md  02_demo_runbook.md
docs/examples/: 01_quick_start.py  02_custom_cohort.py  03_graph_exploration.py  04_feature_analysis.py  05_model_comparison.py
mcp_servers/bq_validator/: __init__.py  server.py  test_server.py
ontology/definition/: base_ontology.rdf  extended_ontology.rdf
results/wlst_full_cohort_2026-03-03/: analysis.md  report.md
scripts/: _critic_smoke.py  _e2e_cohort_smoke.py  build_categorical_domains.py  build_graph_reference_ranges.py  build_phase_h_catalogs.py  build_similarity_reference_ranges.py  check_bq_auth.py  check_creatinine_labels.py  check_loinc_fix_other_labs.py  check_serum_creatinine_only.py  cloud_train.sh  compile_wlst_report.py  critic_evidence_smoke.py  generate_loinc_snomed_map.py  generate_snomed_mappings.py  parse_loinc_snomed_rf2.py  routing_audit.py  run_chat.sh  seed_routing_corpus.py  setup_bigquery.sh  setup_cloud_training.sh  verify_mimic_load.py
src/: cloud_train.py  main.py
src/causal/: __init__.py  _rxnav.py  cohort.py  covariates.py  interventions.py  models.py  outcomes.py  run.py  treatment_assignment.py
src/conversational/: __init__.py  answerer.py  app.py  clinical_consult.py  concept_resolver.py  critic.py  critic_tools.py  decision_log.py  decomposer.py  derived_formula.py  extractor.py  graph_builder.py  models.py  operations.py  operations_aggregates.py  operations_comparison.py  operations_filters.py  orchestrator.py  outliers.py  planner.py  prompts.py  query_log.py  reasoner.py  sql_corrector.py  sql_fastpath.py  sql_render.py  sql_validator.py  sql_validator_dry_run.py  temporal.py
src/feature_extraction/: __init__.py  __main__.py  feature_builder.py  graph_features.py  sql_features.py  tabular_features.py
src/gnn/: CITATIONS.md  __init__.py  __main__.py  diffusion.py  embeddings.py  evaluate.py  experiments.py  graph_export.py  hop_extraction.py  losses.py  model.py  sampling.py  train.py  transformer.py  view_adapter.py
src/graph_analysis/: __init__.py  __main__.py  analysis.py  neo4j_import.py  rdf_to_networkx.py
src/ingestion/: __init__.py  (+4 more)
tests/: conftest.py
(+352 files in other folders)
